--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -6,6 +6,6 @@
         "team": "Zespół",
         "partnership": "Współpraca",
         "partners": "Wzmacniacz",
-        "for_media": "Dla mediów"
+        "for-media": "Dla mediów"
     }
 }
