--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,6 +6,6 @@
     "team": "Team",
     "partnership": "Partnership",
     "partners": "Partners",
-    "for_media": "For media"
+    "for-media": "For media"
   }
 }
