--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -45,5 +45,19 @@
     },
     "title": "Jubilee | ",
     "title1": "October 12, 2026"
+  },
+  "months": {
+    "0": "January",
+    "1": "February",
+    "2": "March",
+    "3": "April",
+    "4": "May",
+    "5": "June",
+    "6": "July",
+    "7": "August",
+    "8": "September",
+    "9": "October",
+    "10": "November",
+    "11": "December"
   }
 }
