--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -59,5 +59,9 @@
     "9": "October",
     "10": "November",
     "11": "December"
+  },
+  "footer": {
+    "social_title": "Social Media",
+    "university-gadgets": "You may also like:"
   }
 }
