--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -59,5 +59,8 @@
         "9": "Październik",
         "10": "Listopad",
         "11": "Grudzień"
+    },
+    "footer": {
+        "social_title": "Media społecznościowe"
     }
 }
