--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -61,6 +61,10 @@
         "11": "Grudzień"
     },
     "footer": {
-        "social_title": "Media społecznościowe"
+        "social_title": "Media społecznościowe",
+        "title": "Możesz także polubił:",
+        "university-gadgets": "Gadżety uniwersyteckie",
+        "website": "Nasza strona internetowa",
+        "rights": "© 2025 | UEP | Wszelkie prawa zastrzeżone"
     }
 }
