--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -60,6 +60,24 @@
     "10": "November",
     "11": "December"
   },
+  "locations": {
+    "Warsaw": "Warsaw",
+    "Krakow": "Krakow",
+    "Lodz": "Lodz",
+    "Wroclaw": "Wroclaw",
+    "Poznan": "Poznan",
+    "Gdansk": "Gdansk",
+    "Szczecin": "Szczecin",
+    "Bydgoszcz": "Bydgoszcz",
+    "Lublin": "Lublin",
+    "Bialystok": "Bialystok",
+    "Katowice": "Katowice",
+    "Rzeszow": "Rzeszow",
+    "Torun": "Torun"
+  },
+  "events": {
+    "academic": "Academic Excellence Forum"
+  },
   "footer": {
     "social_title": "Social Media",
     "title": "You may also like:",
