added title to navigation

--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -6,7 +6,8 @@
         "team": "Zespół",
         "partnership": "Współpraca",
         "partners": "Wzmacniacz",
-        "for-media": "Dla mediów"
+        "for-media": "Dla mediów",
+        "tab-title": "O uniwersytecie"
     },
     "search": "Szukaj",
     "home": {
