--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -6,7 +6,8 @@
     "team": "Team",
     "partnership": "Partnership",
     "partners": "Partners",
-    "for-media": "For media"
+    "for-media": "For media",
+    "tab-title": "About University"
   },
   "search": "Search",
   "home": {
