--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -6,7 +6,9 @@
         "team": "Zespół",
         "partnership": "Współpraca",
         "partners": "Wzmacniacz",
-        "for-media": "Dla mediów",
+        "for-media": "Dla mediów"
+    },
+    "tab": {
         "tab-title": "O uniwersytecie"
     },
     "search": "Szukaj",
