chore: add translations

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -20,31 +20,11 @@
   },
   "jubilee": {
     "units": {
-      "week": [
-        "week",
-        "weeks",
-        "weeks"
-      ],
-      "day": [
-        "day",
-        "days",
-        "days"
-      ],
-      "hour": [
-        "hour",
-        "hours",
-        "hours"
-      ],
-      "minute": [
-        "minute",
-        "minutes",
-        "minutes"
-      ],
-      "second": [
-        "second",
-        "seconds",
-        "seconds"
-      ]
+      "week": ["week", "weeks", "weeks"],
+      "day": ["day", "days", "days"],
+      "hour": ["hour", "hours", "hours"],
+      "minute": ["minute", "minutes", "minutes"],
+      "second": ["second", "seconds", "seconds"]
     },
     "title": "Jubilee | ",
     "title1": "October 12, 2026"
@@ -84,6 +64,10 @@
     "titleUpcoming": "Upcoming",
     "titlePast": "Past",
     "academic": "Academic Excellence Forum"
+  },
+  "pastEvents": {
+    "heading": "Past events",
+    "subheading": "Explore events"
   },
   "footer": {
     "social_title": "Social Media",
