Add mock data and translations

--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -65,6 +65,21 @@
     "titlePast": "Przeszłość",
     "academic": "Forum doskonałości akademickiej"
   },
+  "team": {
+    "title": "Nasz zespół",
+    "subtitle": "Nasz zespół to serce Uniwersytetu. Razem ciężko pracujemy, aby zapewnić Państwu najlepszą obsługę i rozwiązania.",
+    "header1": "Komitet Organizacyjny",
+    "subcategories": {
+      "marketing-and-communication": "Marketing i komunikowanie",
+      "administrative-affairs": "Sprawy administracyjne",
+      "financial-affairs": "Sprawy finansowe",
+      "technology-and-infrastructure": "Technologia i infrastruktura",
+      "business-collaboration": "Współpraca z biznesem",
+      "community-outreach": "Współpraca z otoczeniem",
+      "student-and-doctoral-collaboration": "Współpraca ze studentami i doktorantami"
+    },
+    "header2": "Komitet Honorowy"
+  },
   "footer": {
     "social_title": "Media społecznościowe",
     "title": "Możesz także polubił:",
