--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -81,7 +81,7 @@
       "community-outreach": "Community outreach",
       "student-and-doctoral-collaboration": "Student and doctoral collaboration"
     },
-    "header2": "Honorary Committee"\
+    "header2": "Honorary Committee"
   },
   "footer": {
     "social_title": "Social Media",
