--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -123,5 +123,10 @@
     "subtitle": "Bądź na bieżąco z naszymi najnowszymi publikacjami, w których dzielimy się spostrzeżeniami, badaniami i historiami, które mają znaczenie. Niezależnie od tego, czy eksplorujesz nowe wydania, czy też powracasz do poprzednich prac, nasze publikacje oferują cenną wiedzę, która pozwoli Ci być o krok przed innymi.",
     "btn": "Cała Książka",
     "titleUpcoming": "Nadchodzące"
+  },
+  "page-not-found": {
+    "page-title": "Strona nie znaleziona",
+    "title": "Ups! Strona nie znaleziona",
+    "subtitle": "Przepraszamy, ale strona, której szukasz, nie istnieje lub została przeniesiona."
   }
 }
