--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -6,7 +6,8 @@
     "team": "Zespół",
     "partnership": "Współpraca",
     "partners": "Wzmacniacz",
-    "for-media": "Dla mediów"
+    "for-media": "Dla mediów",
+    "login": "Logowanie"
   },
   "tab": {
     "tab-title": "O uniwersytecie"
