--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -5,7 +5,7 @@
     "publications": "Publikacje",
     "team": "Zespół",
     "partnership": "Współpraca",
-    "partners": "Wzmacniacz",
+    "partners": "Partnerzy",
     "for-media": "Dla mediów"
   },
   "tab": {
