publication upcoming removed

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -104,8 +104,7 @@
   "publications": {
     "title": "Publications",
     "subtitle": "Stay informed with our latest publications, where we share insights, research, and stories that matter. Whether exploring new releases or revisiting past work, our publications offer valuable knowledge to keep you ahead.",
-    "btn": "Full Book",
-    "titleUpcoming": "Upcoming"
+    "btn": "Full Book"
   },
   "admin": {
     "text": "Administator panel",
