--- a/src/locales/pl/translation.json
+++ b/src/locales/pl/translation.json
@@ -121,8 +121,7 @@
   "publications": {
     "title": "Publikacje",
     "subtitle": "Bądź na bieżąco z naszymi najnowszymi publikacjami, w których dzielimy się spostrzeżeniami, badaniami i historiami, które mają znaczenie. Niezależnie od tego, czy eksplorujesz nowe wydania, czy też powracasz do poprzednich prac, nasze publikacje oferują cenną wiedzę, która pozwoli Ci być o krok przed innymi.",
-    "btn": "Cała Książka",
-    "titleUpcoming": "Nadchodzące"
+    "btn": "Cała Książka"
   },
   "page-not-found": {
     "page-title": "Strona nie znaleziona",
